<resources>
    <string name="app_name">Calcolatrice</string>
    <string name="calc_test">1234.67</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnPunto">.</string>
    <string name="btnMoltiplicazione">*</string>
    <string name="btnDivisione">/</string>
    <string name="btnSomma">+</string>
    <string name="btnSottrazione">-</string>
    <string name="btnClear">Cancella</string>
    <string name="btnUguale">=</string>
</resources>