<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/displayCalc"
        android:padding="10dp"
        android:textSize="48sp"
        android:text="@string/calc_test"
        android:gravity="end|center_vertical|bottom"
        android:ems="10"
        android:maxLength="12" />
        />

    <LinearLayout
        android:id="@+id/llOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_marginEnd="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_marginEnd="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_marginEnd="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:backgroundTint="@color/colorOperation"
            android:text="@string/btnDivisione" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn4" />

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn5" />

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn6" />

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:backgroundTint="@color/colorOperation"
            android:text="@string/btnMoltiplicazione" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn3" />

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn2" />

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btn1" />

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnSottrazione"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:backgroundTint="@color/colorOperation"
            android:text="@string/btnMoltiplicazione" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onPunto"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btnPunto" />

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/colorPunto"
            android:text="@string/btn0" />

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:backgroundTint="@color/colorCancella"
            android:text="@string/btnClear" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onEqual"
            android:backgroundTint="@color/colorUguale"
            android:text="@string/btnUguale" />
    </LinearLayout>


</LinearLayout>